exports[`RadioGroup component renders as expected 1`] = `
<fieldset
  className="sc-bZQynM dSZIHB">
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-1">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-1"
      name="test"
      onChange={[Function]}
      type="radio"
      value={0} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 0
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-2">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-2"
      name="test"
      onChange={[Function]}
      type="radio"
      value={1} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 1
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-3">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-3"
      name="test"
      onChange={[Function]}
      type="radio"
      value={2} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 2
    </span>
  </label>
</fieldset>
`;

exports[`RadioGroup component renders as expected with legend text 1`] = `
<fieldset
  className="sc-bZQynM dSZIHB">
  <legend
    className="sc-EHOje eWkBBJ">
    Test legend
  </legend>
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-1">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-1"
      name="test"
      onChange={[Function]}
      type="radio"
      value={0} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 0
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-2">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-2"
      name="test"
      onChange={[Function]}
      type="radio"
      value={1} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 1
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH htHPuU sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-3">
    <input
      className="sc-htpNat vkqtM"
      disabled={false}
      id="test-option-3"
      name="test"
      onChange={[Function]}
      type="radio"
      value={2} />
    <span
      className="radio-fill sc-ifAKCX gnYOzT"
      fill="#fff" />
    <span
      className="sc-bxivhb bRNnnP">
      Option 2
    </span>
  </label>
</fieldset>
`;
